# Proyecto-CPP

./: .gitignore  CMakeLists.txt  main.cpp  polyhedron.txt
API/: input_api.txt  main.py  models.py  objects.py  polyhedron.txt  requirements.txt  window.py  world.py
include/Geometrics/: Parser.hpp  Point.hpp  Polyhedron.hpp  Triangle.hpp  algorithms.hpp
include/Polyhedra/: hexahedron2.txt  polyhedron.txt  tetrahedron.txt  tetrahedron2.txt  tetrahedron3.txt
src/: CMakeLists.txt  Parser.cpp  Point.cpp  Polyhedron.cpp  Triangle.cpp  algorithms.cpp
test/: CMakeLists.txt
